chore: application lifecycle tests (#339)